Fix button off screen bottom and added share

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>SDTM Timer</title>
     <link rel="manifest" href="manifest.json">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,6 +26,8 @@
             display: flex; 
             flex-direction: column; 
             height: 100vh;
+            padding-bottom: env(safe-area-inset-bottom);
+            box-sizing: border-box;
             overflow: hidden;
         }
 
@@ -33,37 +35,62 @@
         h1 { margin: 0; font-size: 34px; font-weight: 800; }
         .subtitle { opacity: 0.5; font-size: 17px; margin-top: 5px; }
 
-        .container { flex: 1; display: flex; flex-direction: column; padding: 0 20px; gap: 15px; overflow-y: auto; }
+        .container { flex: 1; display: flex; flex-direction: column; padding: 0 20px; gap: 15px; overflow: hidden; }
         .screen { display: none; flex-direction: column; height: 100%; }
         .active { display: flex; }
 
         /* Input Card */
-        .input-group { background: var(--card); border-radius: 12px; padding: 15px; margin-bottom: 10px; }
+        .input-group { background: var(--card); border-radius: 12px; padding: 15px; }
         input { background: none; border: none; color: white; width: 100%; font-size: 19px; outline: none; }
 
         /* Grid Selection */
-        .selection-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-top: 10px; }
+        .selection-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; margin-top: 5px; }
         .select-card {
             background: var(--card);
             border-radius: 12px;
-            padding: 20px;
+            padding: 18px;
             text-align: center;
             border: 2px solid transparent;
             transition: 0.2s;
         }
         .select-card.selected { border-color: var(--accent); background: #2c2c2e; }
         .select-card h4 { margin: 0; font-size: 16px; }
-        .select-card p { margin: 5px 0 0; font-size: 12px; opacity: 0.5; }
+        .select-card p { margin: 4px 0 0; font-size: 12px; opacity: 0.5; }
 
         /* Timer UI */
         #timerDisplay { justify-content: center; text-align: center; }
         #timer { font-size: 120px; font-weight: 200; font-variant-numeric: tabular-nums; margin: 20px 0; }
         #status { font-size: 20px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px; }
 
-        /* Global UI */
+        /* Report Log Area */
+        #reportLog { 
+            background: var(--card); 
+            border-radius: 12px; 
+            padding: 15px; 
+            flex: 1; 
+            overflow-y: auto; 
+            white-space: pre-wrap; 
+            font-family: monospace; 
+            font-size: 16px; 
+        }
+
+        /* Menu Card UI */
         .card { background: var(--card); border-radius: 14px; padding: 20px; display: flex; align-items: center; justify-content: space-between; border: none; color: white; text-align: left; }
         .icon-circle { width: 36px; height: 36px; background: var(--accent); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; }
-        .footer-btn { padding: 18px; border-radius: 14px; font-size: 17px; font-weight: 600; border: none; background: var(--accent); color: white; margin-bottom: 40px; margin-top: 20px; }
+
+        /* Footer Buttons */
+        .button-row { display: flex; gap: 10px; margin-bottom: 20px; margin-top: 10px; flex-shrink: 0; }
+        .footer-btn { 
+            flex: 1;
+            padding: 18px; 
+            border-radius: 14px; 
+            font-size: 17px; 
+            font-weight: 600; 
+            border: none; 
+            background: var(--accent); 
+            color: white; 
+        }
+        .secondary-btn { background: #333; }
     </style>
 </head>
 <body>
@@ -88,8 +115,8 @@
                 </div>
                 <div class="icon-circle">☰</div>
             </button>
-            <button class="card" onclick="clearLogs()" style="margin-top:20px; opacity:0.6; border:1px solid #333;">
-                <div style="color:var(--red)">Clear All Meeting Logs</div>
+            <button class="card" onclick="clearLogs()" style="margin-top:20px; opacity:0.6;">
+                <div style="color:var(--red)">Clear Meeting Logs</div>
             </button>
         </div>
     </div>
@@ -97,28 +124,14 @@
     <div id="setup" class="screen">
         <div class="header"><h1>Speech Info</h1></div>
         <div class="container">
-            <div class="input-group">
-                <input type="text" id="name" placeholder="Speaker Name" autocomplete="off">
-            </div>
-            
+            <div class="input-group"><input type="text" id="name" placeholder="Speaker Name" autocomplete="off"></div>
             <div class="selection-grid">
-                <div class="select-card" onclick="selectType(this, 60, 90, 120, 'Table Topics')">
-                    <h4>Table Topics</h4><p>1 - 2 min</p>
-                </div>
-                <div class="select-card" onclick="selectType(this, 120, 150, 180, 'Evaluation')">
-                    <h4>Evaluation</h4><p>2 - 3 min</p>
-                </div>
-                <div class="select-card" onclick="selectType(this, 300, 360, 420, 'Speech')">
-                    <h4>Speech</h4><p>5 - 7 min</p>
-                </div>
-                <div class="select-card" onclick="selectType(this, 240, 300, 360, 'Ice Breaker')">
-                    <h4>Ice Breaker</h4><p>4 - 6 min</p>
-                </div>
-                <div class="select-card" style="grid-column: span 2;" onclick="selectType(this, 0, 0, 0, 'Custom')">
-                    <h4>Custom Time</h4><p>Manual Entry</p>
-                </div>
+                <div class="select-card" onclick="selectType(this, 60, 90, 120, 'Table Topics')"><h4>Table Topics</h4><p>1-2m</p></div>
+                <div class="select-card" onclick="selectType(this, 120, 150, 180, 'Evaluation')"><h4>Evaluation</h4><p>2-3m</p></div>
+                <div class="select-card" onclick="selectType(this, 300, 360, 420, 'Speech')"><h4>Speech</h4><p>5-7m</p></div>
+                <div class="select-card" onclick="selectType(this, 240, 300, 360, 'Ice Breaker')"><h4>Ice Breaker</h4><p>4-6m</p></div>
+                <div class="select-card" style="grid-column: span 2;" onclick="selectType(this, 0, 0, 0, 'Custom')"><h4>Custom Time</h4><p>Manual Entry</p></div>
             </div>
-
             <button class="footer-btn" onclick="startTimer()">Begin Timing</button>
             <button style="background:none; color:var(--accent); border:none;" onclick="showScreen('menu')">Cancel</button>
         </div>
@@ -133,8 +146,11 @@
     <div id="report" class="screen">
         <div class="header"><h1>Meeting Report</h1></div>
         <div class="container">
-            <div id="reportLog" style="background:var(--card); border-radius:12px; padding:15px; flex:1; overflow-y:auto; white-space:pre-wrap;"></div>
-            <button class="footer-btn" onclick="showScreen('menu')">Done</button>
+            <div id="reportLog"></div>
+            <div class="button-row">
+                <button class="footer-btn secondary-btn" onclick="shareReport()">Share</button>
+                <button class="footer-btn" onclick="showScreen('menu')">Done</button>
+            </div>
         </div>
     </div>
 
@@ -154,17 +170,12 @@
             el.classList.add('selected');
             selectedTypeLabel = label;
             if(label === 'Custom') {
-                const cg = prompt("Green (min):", "5") * 60;
-                const cy = prompt("Yellow (min):", "6") * 60;
-                const cr = prompt("Red (min):", "7") * 60;
-                lims = { g:cg, y:cy, r:cr };
-            } else {
-                lims = { g, y, r };
-            }
+                lims = { g: prompt("Green min:",1)*60, y: prompt("Yellow min:",1.25)*60, r: prompt("Red min:",1.5)*60 };
+            } else { lims = { g, y, r }; }
         }
 
         function startTimer() {
-            if(!lims.g) { alert("Please select a speech type."); return; }
+            if(!lims.g) return alert("Select speech type");
             document.getElementById('spkName').innerText = document.getElementById('name').value || "Speaker";
             showScreen('timerDisplay');
         }
@@ -183,9 +194,8 @@
         function update() {
             elapsed = Math.floor((Date.now() - start) / 1000);
             let m = Math.floor(elapsed/60).toString().padStart(2,'0'), s = (elapsed%60).toString().padStart(2,'0');
-            document.getElementById('timer').innerText = m+":"+s;
+            document.getElementById('timer').innerText = `${m}:${s}`;
             document.getElementById('status').innerText = "Timing...";
-
             if(elapsed >= lims.r) { document.body.style.background = "var(--red)"; document.body.style.color="white"; }
             else if(elapsed >= lims.y) { document.body.style.background = "var(--yellow)"; document.body.style.color="black"; }
             else if(elapsed >= lims.g) { document.body.style.background = "var(--green)"; document.body.style.color="white"; }
@@ -199,11 +209,18 @@
 
         function loadReport() {
             let logs = JSON.parse(localStorage.getItem('sdtm_logs')||"[]");
-            document.getElementById('reportLog').innerText = logs.length ? logs.join('\n') : "No data recorded.";
+            document.getElementById('reportLog').innerText = logs.length ? logs.join('\n') : "No data.";
         }
 
-        function clearLogs() { if(confirm("Clear meeting logs?")) { localStorage.removeItem('sdtm_logs'); location.reload(); } }
+        async function shareReport() {
+            const logs = JSON.parse(localStorage.getItem('sdtm_logs')||"[]");
+            const text = "SDTM Timer Report:\n\n" + logs.join('\n');
+            if (navigator.share) {
+                await navigator.share({ title: 'SDTM Timer Report', text: text });
+            } else { alert("Sharing not supported on this browser."); }
+        }
 
+        function clearLogs() { if(confirm("Clear logs?")) { localStorage.removeItem('sdtm_logs'); location.reload(); } }
         if ('serviceWorker' in navigator) { navigator.serviceWorker.register('sw.js'); }
     </script>
 </body>
