--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <style>
         :root {
-            --bg: #F2F2F7; /* Apple Light Grey System Background */
+            --bg: #F2F2F7;
             --card: #FFFFFF;
-            --accent: #007AFF; /* Apple Blue */
+            --accent: #007AFF;
             --text: #000000;
             --subtext: #3A3A3C;
             --red: #FF3B30;
@@ -41,7 +41,6 @@
         .screen { display: none; flex-direction: column; height: 100%; overflow: hidden; }
         .active { display: flex; }
 
-        /* MODAL */
         #customModal {
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0,0,0,0.4); z-index: 9999; align-items: center; justify-content: center;
@@ -53,7 +52,6 @@
             border: 1px solid var(--border);
         }
 
-        /* CARDS */
         .card { 
             background: var(--card); border-radius: 18px; padding: clamp(20px, 3.5vw, 35px); 
             display: flex; align-items: center; justify-content: space-between; 
@@ -88,7 +86,6 @@
         .select-card.selected { border: 3px solid var(--accent); background: #E8F2FF; }
         .select-card h4 { margin: 0; font-size: 20px; color: #1C1C1E; }
 
-        /* FOOTERS */
         .button-row { display: flex; gap: 15px; padding: 10px 20px 20px; flex-shrink: 0; background: var(--bg); max-width: 950px; margin: 0 auto; width: 100%; box-sizing: border-box; }
         .footer-btn { 
             flex: 1; padding: 18px; border-radius: 16px; font-size: 22px; 
@@ -97,15 +94,15 @@
         .secondary-btn { background: #E5E5EA; color: #000000; border: 1px solid var(--border); }
         .commit-btn { background: var(--green); color: white; }
 
+        /* FOOTER with User Guide Link */
         .credit-footer { 
-            text-align: center; margin-top: auto; padding: 20px 0; border-top: 1px solid var(--border); flex-shrink: 0; background: var(--card);
+            text-align: center; margin-top: auto; padding: 15px 0; border-top: 1px solid var(--border); flex-shrink: 0; background: var(--card);
         }
         .credit-link { 
-            color: var(--subtext); text-decoration: none; font-weight: 600; font-size: 18px; line-height: 1.5;
+            color: var(--subtext); text-decoration: none; font-weight: 600; font-size: 17px; line-height: 1.6;
         }
         .credit-link span { color: var(--accent); text-decoration: underline; font-weight: 800; }
 
-        /* TIMER SCREEN */
         #timer { font-size: clamp(100px, 35vw, 450px); font-weight: 200; text-align: center; margin: auto 0; font-variant-numeric: tabular-nums; color: #000; }
         #reportLog { background: var(--card); border-radius: 18px; padding: 25px; flex: 1; overflow-y: auto; font-family: monospace; font-size: 22px; border: 1px solid var(--border); color: #000; }
     </style>
@@ -142,6 +139,10 @@
             </button>
         </div>
         <div class="credit-footer">
+            <a href="manual.html" target="_blank" class="credit-link">
+                <span>User Guide ↗</span>
+            </a>
+            <div style="margin: 5px 0;"></div>
             <a href="https://bit.ly/m/SDTM" class="credit-link">
                 <span>Visit Our Website ↗</span><br>
                 Created by Southern Dutchess Toastmasters
@@ -380,7 +381,9 @@
             const club = localStorage.getItem('sdtm_club_name') || "Meeting";
             const text = club + " Timer Report:\n\n" + logs.join('\n');
             if (navigator.share) await navigator.share({ title: 'Timer Report', text: text });
-            else { alert("Copied to clipboard!"); }
+            else { 
+                const el = document.createElement('textarea'); el.value = text; document.body.appendChild(el); el.select(); document.execCommand('copy'); document.body.removeChild(el); alert("Copied to clipboard!"); 
+            }
         }
 
         if ('serviceWorker' in navigator) { navigator.serviceWorker.register('sw.js'); }
