--- a/manual.html
+++ b/manual.html
@@ -38,6 +38,17 @@
             border: 1px solid var(--border);
         }
 
+        .back-btn {
+            display: inline-block;
+            background: var(--accent);
+            color: white;
+            padding: 12px 24px;
+            border-radius: 12px;
+            text-decoration: none;
+            font-weight: 700;
+            margin-bottom: 20px;
+        }
+
         h1 { font-size: 36px; font-weight: 800; margin-top: 0; color: var(--text); }
         h2 { font-size: 24px; font-weight: 700; border-bottom: 2px solid var(--bg); padding-bottom: 10px; margin-top: 40px; }
         h3 { font-size: 20px; font-weight: 700; color: var(--accent); }
@@ -82,6 +93,8 @@
 <body>
 
 <div class="wrapper">
+    <a href="index.html" class="back-btn">← Return to App</a>
+
     <div class="content-card">
         <h1>Meeting Timer Guide</h1>
         <p>This high-visibility tool is designed for timing speeches, evaluations, and impromptu sessions. It scales seamlessly across smartphones, tablets, and desktops.</p>
@@ -134,10 +147,14 @@
 
         <h2>5. Advanced Tips</h2>
         <ul>
-            <li><strong>iPad/Tablet Use:</strong> Place the device on a stand at the front of the room. The timer scales to be visible from the back row.</li>
+            <li><strong>Large Screen Visibility:</strong> Place the device on a stand at the front of the room. The timer scales to be visible from the back row.</li>
             <li><strong>Offline Mode:</strong> The app works without an internet connection once loaded.</li>
             <li><strong>Install as App:</strong> Use "Add to Home Screen" in your browser settings to run the timer as a standalone, full-screen application.</li>
         </ul>
+
+        <div style="margin-top: 40px; text-align: center;">
+            <a href="index.html" class="back-btn">Ready? Return to App</a>
+        </div>
     </div>
 
     <div class="footer">
