--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
         .screen { display: none; flex-direction: column; height: 100%; overflow: hidden; }
         .active { display: flex; }
 
-        /* Custom App Modals */
         #customModal {
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0,0,0,0.4); z-index: 9999; align-items: center; justify-content: center;
@@ -53,7 +52,6 @@
             border: 1px solid var(--border);
         }
 
-        /* Menu Cards */
         .card { 
             background: var(--card); border-radius: 18px; padding: clamp(20px, 3.5vw, 35px); 
             display: flex; align-items: center; justify-content: space-between; 
@@ -88,7 +86,6 @@
         .select-card.selected { border: 3px solid var(--accent); background: #E8F2FF; }
         .select-card h4 { margin: 0; font-size: 20px; color: #1C1C1E; }
 
-        /* Buttons & Footers */
         .button-row { display: flex; gap: 15px; padding: 10px 20px 20px; flex-shrink: 0; background: var(--bg); max-width: 950px; margin: 0 auto; width: 100%; box-sizing: border-box; }
         .footer-btn { 
             flex: 1; padding: 18px; border-radius: 16px; font-size: 22px; 
@@ -97,7 +94,6 @@
         .secondary-btn { background: #E5E5EA; color: #000000; border: 1px solid var(--border); }
         .commit-btn { background: var(--green); color: white; }
 
-        /* Responsive Footer */
         .credit-footer { 
             text-align: center; margin-top: auto; padding: 15px 20px; border-top: 1px solid var(--border); flex-shrink: 0; background: var(--card);
         }
@@ -109,9 +105,8 @@
         }
         .credit-link { color: var(--subtext); text-decoration: none; font-weight: 600; font-size: 16px; }
         .credit-link span { color: var(--accent); text-decoration: underline; font-weight: 800; }
-        .version-tag { font-size: 11px; opacity: 0.4; margin-top: 5px; font-family: monospace; letter-spacing: 1px; }
+        .version-tag { font-size: 11px; opacity: 0.4; margin-top: 5px; font-family: monospace; }
 
-        /* Timer UI */
         #timer { font-size: clamp(100px, 35vw, 450px); font-weight: 200; text-align: center; margin: auto 0; font-variant-numeric: tabular-nums; color: #000; }
         #reportLog { background: var(--card); border-radius: 18px; padding: 25px; flex: 1; overflow-y: auto; font-family: monospace; font-size: 22px; border: 1px solid var(--border); color: #000; }
     </style>
@@ -262,11 +257,10 @@
             }
             renderSpeakerList(allSpeakers); 
             
-            // Dynamic Version from Cache
             if ('caches' in window) {
                 caches.keys().then(names => {
                     if (names.length > 0) document.getElementById('versionDisplay').innerText = names[0].toUpperCase();
-                    else document.getElementById('versionDisplay').innerText = "V2.1.0-LOCAL";
+                    else document.getElementById('versionDisplay').innerText = "V2.1.2-LOCAL";
                 });
             }
         }
@@ -400,9 +394,10 @@
             }
         }
 
-        // Service Worker Update Check
+        // Service Worker Update Check with Cache-Buster
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('sw.js').then(reg => {
+            const buster = Date.now();
+            navigator.serviceWorker.register('sw.js?v=' + buster).then(reg => {
                 reg.onupdatefound = () => {
                     const installingWorker = reg.installing;
                     installingWorker.onstatechange = () => {
